Renamed some classes more explicitly

--- a/examples/CTMSM.ipynb
+++ b/examples/CTMSM.ipynb
@@ -6,8 +6,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import numpy as np\n",
     "import msmrd2\n",
-    "import numpy as np"
+    "from msmrd2 import continuousTimeMarkovStateModel as ctmsm"
    ]
   },
   {
@@ -37,7 +38,7 @@
     "MSMtype = 1\n",
     "ratematrix = np.array([[-5.0,2.0,3.0],[1.0,-2.0,1.0],[3.3,5.4,-8.7]])\n",
     "seed = 0 # Seed = -1 used random device as seed\n",
-    "ctmsm = msmrd2.ctmsm(MSMtype, ratematrix, seed)"
+    "markovModel = ctmsm(MSMtype, ratematrix, seed)"
    ]
   },
   {
@@ -52,10 +53,10 @@
     "t = 0\n",
     "print('{:<15s}{:<15s}{:<10s}{:<10s}'.format(\"Iteration\", \"Time\", \"State\", \"Lagtime\"))\n",
     "for i in range(totalsteps):\n",
-    "    print('{:<15d}{:<15f}{:<10d}{:<10f}'.format(i, t, part1.state, ctmsm.lagtime))\n",
+    "    print('{:<15d}{:<15f}{:<10d}{:<10f}'.format(i, t, part1.state, markovModel.lagtime))\n",
     "    #print(i, t, part1.state, ctmsm.lagtime)\n",
-    "    ctmsm.propagate(part1, ksteps)\n",
-    "    t += ctmsm.lagtime"
+    "    markovModel.propagate(part1, ksteps)\n",
+    "    t += markovModel.lagtime"
    ]
   },
   {
