--- a/examples/dipole.ipynb
+++ b/examples/dipole.ipynb
@@ -6,10 +6,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import os\n",
+    "import numpy as np\n",
     "import msmrd2\n",
     "import msmrd2.visualization as msmrdvis\n",
-    "import numpy as np\n",
-    "import os"
+    "from msmrd2 import continuousTimeMarkovStateModel as ctmsm\n",
+    "from msmrd2.potentials import dipole\n",
+    "from msmrd2.integrators import overdampedLangevinMarkovSwitch as odLangevinMS"
    ]
   },
   {
@@ -22,11 +25,11 @@
     "MSMtype = 1\n",
     "ratematrix = np.array([[-3.0,3.0],[1.5,-1.5]])\n",
     "seed = 0 # Seed = -1 used random device as seed\n",
-    "ctmsm = msmrd2.ctmsm(MSMtype, ratematrix, seed)\n",
+    "markovModel = ctmsm(MSMtype, ratematrix, seed)\n",
     "Dlist = np.array([0.0, 0.0])\n",
     "Drotlist = np.array([1.0, 1.0])\n",
-    "ctmsm.setD(Dlist)\n",
-    "ctmsm.setDrot(Drotlist)"
+    "markovModel.setD(Dlist)\n",
+    "markovModel.setDrot(Drotlist)"
    ]
   },
   {
@@ -63,7 +66,7 @@
     "dt = 0.001\n",
     "seed = -1 # Seed = -1 used random device as seed\n",
     "rotation = True\n",
-    "intg = msmrd2.integrators.odLangevinMarkovSwitch(ctmsm, dt, seed, rotation)"
+    "integrator = odLangevinMS(markovModel, dt, seed, rotation)"
    ]
   },
   {
@@ -75,8 +78,8 @@
     "# Define and set potential\n",
     "scalefactor = 30.0\n",
     "Efieldvector = np.array([0,1,0])\n",
-    "dipolePot = msmrd2.potentials.dipole(scalefactor, Efieldvector)\n",
-    "intg.setExternalRodPotential(dipolePot)"
+    "potentialDipole = dipole(scalefactor, Efieldvector)\n",
+    "integrator.setExternalRodPotential(potentialDipole)"
    ]
   },
   {
@@ -109,7 +112,7 @@
     "            datafile.write('type_1' + ' ' + ' '.join(map(str, v1)) + '\\n')\n",
     "            datafile.write('type_1' + ' ' + ' '.join(map(str, v2)) + '\\n')\n",
     "        prevstate[j] = 1*part.state\n",
-    "    intg.integrate(partlist)\n",
+    "    integrator.integrate(partlist)\n",
     "datafile.close()"
    ]
   },
@@ -135,8 +138,8 @@
     "part1list = msmrd2.integrators.particleMSList([part])\n",
     "print('{:<10s}{:<10s}{:<40s}{:<40s}'.format(\"Iteration\", \"Time\", \"Position 1\", \"Orientation 1\"))\n",
     "for i in range(timeIters):\n",
-    "    print('{:<10d}{:<10f}{:<40s}{:<40s}'.format(i, intg.clock, str(part1list[0].position), str(part1list[0].orientation)))\n",
-    "    intg.integrate(part1list)"
+    "    print('{:<10d}{:<10f}{:<40s}{:<40s}'.format(i, integrator.clock, str(part1list[0].position), str(part1list[0].orientation)))\n",
+    "    integrator.integrate(part1list)"
    ]
   },
   {
