--- a/examples/patchyParticles.ipynb
+++ b/examples/patchyParticles.ipynb
@@ -6,9 +6,81 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import msmrd2\n",
     "import numpy as np\n",
-    "import matplotlib.pyplot as plt"
+    "import matplotlib.pyplot as plt\n",
+    "import msmrd2\n",
+    "import msmrd2.tools.quaternions as quats\n",
+    "import msmrd2.visualization as msmrdvis\n",
+    "from msmrd2.potentials import patchyParticle\n",
+    "from msmrd2.integrators import overdampedLangevin as odLangevin"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Define arbitrarily large list of rod-like particles\n",
+    "numparticles = 5\n",
+    "boxsize = 3\n",
+    "D = 1.0\n",
+    "Drot = 1.0\n",
+    "bodytype = 'rigidbody'\n",
+    "pyPartlist = [] \n",
+    "for i in range(numparticles):\n",
+    "    overlap = True\n",
+    "    while overlap:\n",
+    "        position = np.array([boxsize*np.random.rand()-0.5*boxsize,\n",
+    "                             boxsize*np.random.rand()-0.5*boxsize,\n",
+    "                             boxsize*np.random.rand()-0.5*boxsize])\n",
+    "        overlap = False     \n",
+    "        for j in range(len(pyPartlist)):\n",
+    "            if np.linalg.norm(position - pyPartlist[j].position) < 2.0:\n",
+    "                overlap = True\n",
+    "                continue\n",
+    "    orientation = np.array([np.random.rand(),np.random.rand(),np.random.rand(),np.random.rand()])\n",
+    "    orientation = orientation/np.linalg.norm(orientation)\n",
+    "    #orientation = np.array([np.cos(np.pi/4.0), np.sin(np.pi/4), 0.0, 0.0]) #Rotate 90 degrees in x axis\n",
+    "    part = msmrd2.particle(D, Drot, bodytype, position, orientation)\n",
+    "    pyPartlist.append(part)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create list of particles that can be read from msmrd\n",
+    "# Note the particles in this list will be independent from the python list.\n",
+    "partlist = msmrd2.integrators.particleList(pyPartlist)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Over-damped Langevin integrator definition\n",
+    "dt = 0.00001 #0.000005\n",
+    "seed = 6 # Seed = -1 used random device as seed\n",
+    "rotation = True\n",
+    "integrator = odLangevin(dt, seed, rotation) \n",
+    "#intg.setKbT(1.0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Define boundary (choose either spherical or box)\n",
+    "# sphericalBoundary = msmrd2.sphere(radius,'reflective')\n",
+    "boxBoundary = msmrd2.box(boxsize,boxsize,boxsize,'reflective')\n",
+    "integrator.setBoundary(boxBoundary)"
    ]
   },
   {
@@ -20,8 +92,9 @@
     "# Define Patchy Particle potential\n",
     "sigma = 1.0\n",
     "strength = 100.0\n",
-    "patchesCoordinates = [np.array([1.,0.,0.])]\n",
-    "patchyParticle = msmrd2.potentials.patchyParticle(sigma, strength, patchesCoordinates)"
+    "patchesCoordinates = [np.array([1.,0.,0.]), np.array([np.cos(3*np.pi/5.0),np.sin(3*np.pi/5.0),0.])]\n",
+    "potentialPatchyParticle = patchyParticle(sigma, strength, patchesCoordinates)\n",
+    "integrator.setPairRigidBodyPotential(potentialPatchyParticle)"
    ]
   },
   {
@@ -30,12 +103,44 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dist = np.arange(0, 2, 0.01)\n",
+    "# Integrate particle list and print only positions \n",
+    "timesteps = 10000000\n",
+    "stride = 200\n",
+    "datafile  = open('../data/vmd/patchyParticles.xyz', 'w')\n",
+    "for i in range(timesteps):\n",
+    "    if i%stride == 0:\n",
+    "        datafile.write(str(3*len(partlist)) + '\\n')\n",
+    "        datafile.write(str(0) + '\\n')\n",
+    "    for j, part in enumerate(partlist):\n",
+    "        if i%stride == 0:\n",
+    "            v0 = part.position\n",
+    "            v1 = v0 + 0.6*sigma*quats.rotateVec(patchesCoordinates[0], part.orientation)\n",
+    "            v2 = v0 + 0.6*sigma*quats.rotateVec(patchesCoordinates[1], part.orientation)\n",
+    "            datafile.write('type_0' + ' ' + ' '.join(map(str, v0)) + '\\n')\n",
+    "            datafile.write('type_1' + ' ' + ' '.join(map(str, v1)) + '\\n')\n",
+    "            datafile.write('type_1' + ' ' + ' '.join(map(str, v2)) + '\\n')\n",
+    "    integrator.integrate(partlist)\n",
+    "    if i%1000 == 0:\n",
+    "        print(\"Percentage complete: \", 100*i/timesteps, \"%\", end=\"\\r\")\n",
+    "datafile.close()\n",
+    "# Generate TCL script to visualize with VMD\n",
+    "msmrdvis.generateTCL_patchyParticles(numparticles = numparticles)\n",
+    "print(\"Percentage complete: \", 100, \" %\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Calculate potential for aligned and misaligned molecules\n",
+    "dist = np.arange(0, 2*sigma, 0.01)\n",
     "pos1 = np.array([0., 0., 0.])\n",
     "pos2 = np.array([[i, 0., 0.] for i in dist])\n",
     "phi1 = 0.0\n",
     "phi2 = np.pi\n",
-    "phi1p = np.pi/4.0\n",
+    "phi1p = np.pi\n",
     "phi2p = 0.0\n",
     "u = np.array([0.,0.,1.]) #rotationAxis\n",
     "# Quaternions that rotate phi along axis u\n",
@@ -56,8 +161,8 @@
     "                   np.sin(0.5*phi2p )*u[1],\n",
     "                   np.sin(0.5*phi2p )*u[2]]) \n",
     "\n",
-    "potantialAligned = [patchyParticle.evaluate(pos1,p2,theta1,theta2) for p2 in pos2]\n",
-    "potantialMisaligned = [patchyParticle.evaluate(pos1,p2,theta1p,theta2p) for p2 in pos2]"
+    "potantialAligned = [potentialPatchyParticle.evaluate(pos1,p2,theta1,theta2) for p2 in pos2]\n",
+    "potantialMisaligned = [potentialPatchyParticle.evaluate(pos1,p2,theta1p,theta2p) for p2 in pos2]"
    ]
   },
   {
@@ -66,11 +171,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Plot potential\n",
     "plt.plot(dist, potantialAligned, label = \"aligned\")\n",
     "plt.plot(dist, potantialMisaligned, label = \"misaligned\")\n",
     "plt.plot(dist, 0*dist, '--k', lw=0.5)\n",
     "plt.legend()\n",
-    "plt.xlim([0,2])"
+    "plt.xlim([0,2*sigma])"
    ]
   },
   {
@@ -79,7 +185,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "patchyParticle.forceTorque(pos1,pos2[20],theta1p,theta2p)"
+    "potentialPatchyParticle.forceTorque(pos1,pos2[20],theta1p,theta2p)"
    ]
   },
   {
@@ -143,13 +249,13 @@
     "xstar = 0.85*sigma\n",
     "xcritical, b = calculateContinuityParametrs(sigma,xstar,a)\n",
     "# Attractive patches part\n",
-    "eps2 = -20.0\n",
+    "eps2 = -50.0\n",
     "a2 = 20.0\n",
     "xstar2 = 0.1*sigma\n",
     "xcritical2, b2 = calculateContinuityParametrs(sigma,xstar2,a2)\n",
     "# Isotropic attractive\n",
-    "eps3 = -10.0\n",
-    "a3 = 0.5#0.55\n",
+    "eps3 = -20.0\n",
+    "a3 = 0.55 # 0.5#0.55\n",
     "xstar3 = 0.85*sigma\n",
     "xcritical3, b3 = calculateContinuityParametrs(sigma,xstar3,a3)"
    ]
@@ -180,11 +286,18 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [default]",
    "language": "python",
    "name": "python3"
   },
