--- a/examples/potentials.ipynb
+++ b/examples/potentials.ipynb
@@ -6,10 +6,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import msmrd2\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "from ipywidgets import interact"
+    "from ipywidgets import interact\n",
+    "import msmrd2\n",
+    "from msmrd2.potentials import gaussians3D\n",
+    "from msmrd2.potentials import dipole\n",
+    "from msmrd2.integrators import overdampedLangevin as odLangevin"
    ]
   },
   {
@@ -19,7 +22,7 @@
    "outputs": [],
    "source": [
     "# Define potential function\n",
-    "gauss3Dpot = msmrd2.potentials.gaussians3D(15,3,20,-1)"
+    "gauss3Dpot = gaussians3D(15,3,20,-1)"
    ]
   },
   {
@@ -72,8 +75,8 @@
     "dt = 0.001\n",
     "seed = 0 # Seed = -1 used random device as seed\n",
     "rotation = True\n",
-    "intg = msmrd2.integrators.odLangevin(dt, seed, rotation) \n",
-    "intg.setExternalPotential(gauss3Dpot)"
+    "integrator = odLangevin(dt, seed, rotation) \n",
+    "integrator.setExternalPotential(gauss3Dpot)"
    ]
   },
   {
@@ -82,7 +85,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dipolePot = msmrd2.potentials.dipole(1.0, np.array([0,0,1]))"
+    "dipolePot = dipole(1.0, np.array([0,0,1]))"
    ]
   },
   {
@@ -91,7 +94,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "intg.setExternalRodPotential(dipolePot)"
+    "integrator.setExternalRodPotential(dipolePot)"
    ]
   },
   {
