--- a/examples/odLangevinMarkovSwitch.ipynb
+++ b/examples/odLangevinMarkovSwitch.ipynb
@@ -6,8 +6,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import numpy as np\n",
     "import msmrd2\n",
-    "import numpy as np"
+    "from msmrd2 import continuousTimeMarkovStateModel as ctmsm\n",
+    "from msmrd2.integrators import overdampedLangevinMarkovSwitch as odLangevinMS "
    ]
   },
   {
@@ -20,11 +22,11 @@
     "MSMtype = 1\n",
     "ratematrix = np.array([[-5.0,2.0,3.0],[1.0,-2.0,1.0],[3.3,5.4,-8.7]])\n",
     "seed = 0 # Seed = -1 used random device as seed\n",
-    "ctmsm = msmrd2.ctmsm(MSMtype, ratematrix, seed)\n",
+    "markovModel = ctmsm(MSMtype, ratematrix, seed)\n",
     "Dlist = np.array([1.0, 3.0, 2.0])\n",
     "Drotlist = np.array([0.5, 0.2, 0.1])\n",
-    "ctmsm.setD(Dlist)\n",
-    "ctmsm.setDrot(Drotlist)"
+    "markovModel.setD(Dlist)\n",
+    "markovModel.setDrot(Drotlist)"
    ]
   },
   {
@@ -54,9 +56,9 @@
     "dt = 0.05 # should be smaller than Gillespie inverse transition rates\n",
     "seed = 0 # Seed = -1 used random device as seed\n",
     "rotation = True\n",
-    "intg = msmrd2.integrators.odLangevinMarkovSwitch(ctmsm, dt, seed, rotation) \n",
+    "integrator1 = odLangevinMS(markovModel, dt, seed, rotation) \n",
     "# Create second integrator for list integration\n",
-    "intg2 = msmrd2.integrators.odLangevinMarkovSwitch(ctmsm, dt, seed, rotation) "
+    "integrator2 = odLangevinMS(markovModel, dt, seed, rotation) "
    ]
   },
   {
@@ -72,8 +74,8 @@
     "print('{:<10s}{:<15s}{:<15s}{:<15s}{:<15s}{:<40s}'.format(\"Iteration\", \"Time\", \"State\", \"D\", \"Drot\", \"Position 1\"))\n",
     "for i in range(timesteps):\n",
     "    print('{:<10d}{:<15f}{:<15d}{:<15f}{:<15f}{:<40s}'\n",
-    "          .format(i, intg.clock, part1list[0].state, part1list[0].D, part1list[0].Drot, str(part1list[0].position)))\n",
-    "    intg.integrate(part1list)"
+    "          .format(i, integrator1.clock, part1list[0].state, part1list[0].D, part1list[0].Drot, str(part1list[0].position)))\n",
+    "    integrator1.integrate(part1list)"
    ]
   },
   {
@@ -94,8 +96,8 @@
     "print('{:<10s}{:^10s}{:<40s}{:^15s}{:<30s}'.format(\"Time\", \"State 1\", \"Position 1\", \"State 2\", \"Position2\"))\n",
     "for i in range(timesteps):\n",
     "    print('{:<10f}{:^10d}{:<40s}{:^15d}{:<30s}'\n",
-    "          .format(intg2.clock, partlist[0].state, str(partlist[0].position), partlist[1].state, str(partlist[1].position)))\n",
-    "    intg2.integrate(partlist)"
+    "          .format(integrator2.clock, partlist[0].state, str(partlist[0].position), partlist[1].state, str(partlist[1].position)))\n",
+    "    integrator2.integrate(partlist)"
    ]
   },
   {
