Moved particletype into integrator

--- a/examples/dipole.ipynb
+++ b/examples/dipole.ipynb
@@ -39,7 +39,6 @@
    "outputs": [],
    "source": [
     "# Particle definition\n",
-    "bodytype = 'rod'\n",
     "orientation = np.array([1,0,0,0])\n",
     "particlelist = []\n",
     "# Create a grid of particles\n",
@@ -47,7 +46,7 @@
     "    for j in range(6): \n",
     "        position = np.array([i-2.5,j-2.5,0])\n",
     "        state = np.random.randint(0,2)\n",
-    "        part = msmrd2.particleMS(MSMtype, state, Dlist[state], Drotlist[state], bodytype, position, orientation)   \n",
+    "        part = msmrd2.particleMS(MSMtype, state, Dlist[state], Drotlist[state], position, orientation)   \n",
     "        orientVector = np.random.normal(0,1,3)\n",
     "        orientVector = orientVector/np.linalg.norm(orientVector)\n",
     "        part.setOrientVector(orientVector)\n",
@@ -65,8 +64,9 @@
     "# Over-damped Langevin integrator with Markovian Switch definition\n",
     "dt = 0.001\n",
     "seed = -1 # Seed = -1 used random device as seed\n",
+    "bodytype = \"rod\"\n",
     "rotation = True\n",
-    "integrator = odLangevinMS(markovModel, dt, seed, rotation)"
+    "integrator = odLangevinMS(markovModel, dt, seed, bodytype, rotation)"
    ]
   },
   {
