--- a/examples/gayBerne.ipynb
+++ b/examples/gayBerne.ipynb
@@ -35,7 +35,6 @@
     "boxsize = 35\n",
     "D = 1.0\n",
     "Drot = 1.0\n",
-    "bodytype = 'rod'\n",
     "pyPartlist = [] \n",
     "for i in range(numparticles):\n",
     "    overlap = True\n",
@@ -55,7 +54,7 @@
     "    orientation = np.array([np.random.rand(),np.random.rand(),np.random.rand(),np.random.rand()])\n",
     "    orientation = orientation/np.linalg.norm(orientation)\n",
     "    #orientation = np.array([np.cos(np.pi/4.0), np.sin(np.pi/4), 0.0, 0.0]) #Rotate 90 degrees in x axis\n",
-    "    part = msmrd2.particle(D, Drot, bodytype, position, orientation)\n",
+    "    part = msmrd2.particle(D, Drot, position, orientation)\n",
     "    pyPartlist.append(part)"
    ]
   },
@@ -79,8 +78,9 @@
     "# Over-damped Langevin integrator definition\n",
     "dt = 0.000005\n",
     "seed = 0 # Seed = -1 used random device as seed\n",
+    "bodytype = 'rod'\n",
     "rotation = True\n",
-    "integrator = odLangevin(dt, seed, rotation) \n",
+    "integrator = odLangevin(dt, seed, bodytype, rotation) \n",
     "integrator.setKbT(0.1)"
    ]
   },
