--- a/examples/odLangevinMarkovSwitch.ipynb
+++ b/examples/odLangevinMarkovSwitch.ipynb
@@ -38,12 +38,11 @@
     "# Particle definition\n",
     "ptype = 0\n",
     "pstate = 0\n",
-    "bodytype = 'rigidsolid'\n",
     "D = Dlist[pstate]\n",
     "Drot = Drotlist[pstate]\n",
     "position = np.array([1,1,1])\n",
     "orientation = np.array([1,0,0,0])\n",
-    "part1 = msmrd2.particleMS(ptype, pstate, D, Drot, bodytype, position, orientation)"
+    "part1 = msmrd2.particleMS(ptype, pstate, D, Drot, position, orientation)"
    ]
   },
   {
@@ -55,10 +54,11 @@
     "# Over-damped Langevin integrator with Markovian switch definition\n",
     "dt = 0.05 # should be smaller than Gillespie inverse transition rates\n",
     "seed = 0 # Seed = -1 used random device as seed\n",
+    "bodytype = 'rigidbody'\n",
     "rotation = True\n",
-    "integrator1 = odLangevinMS(markovModel, dt, seed, rotation) \n",
+    "integrator1 = odLangevinMS(markovModel, dt, seed, bodytype, rotation) \n",
     "# Create second integrator for list integration\n",
-    "integrator2 = odLangevinMS(markovModel, dt, seed, rotation) "
+    "integrator2 = odLangevinMS(markovModel, dt, seed, bodytype, rotation) "
    ]
   },
   {
@@ -87,8 +87,8 @@
     "# For a list of particles\n",
     "pairInteractions = False\n",
     "position2 = np.array([2,2,2])\n",
-    "part1 = msmrd2.particleMS(ptype, pstate, D, Drot, bodytype, position, orientation)\n",
-    "part2 = msmrd2.particleMS(ptype, pstate, D, Drot, bodytype, position2, orientation)\n",
+    "part1 = msmrd2.particleMS(ptype, pstate, D, Drot, position, orientation)\n",
+    "part2 = msmrd2.particleMS(ptype, pstate, D, Drot, position2, orientation)\n",
     "partlist = msmrd2.integrators.particleMSList([part1,part2])\n",
     "# Integrate particle list and print only positions (with integratelist)\n",
     "t = 0\n",
