--- a/examples/potentials.ipynb
+++ b/examples/potentials.ipynb
@@ -74,8 +74,9 @@
     "# How to load the potential into the over-damped Langevin integrator\n",
     "dt = 0.001\n",
     "seed = 0 # Seed = -1 used random device as seed\n",
+    "bodytype = 'point'\n",
     "rotation = True\n",
-    "integrator = odLangevin(dt, seed, rotation) \n",
+    "integrator = odLangevin(dt, seed, bodytype, rotation) \n",
     "integrator.setExternalPotential(gauss3Dpot)"
    ]
   },
