--- a/examples/odLangevin.ipynb
+++ b/examples/odLangevin.ipynb
@@ -20,12 +20,11 @@
     "# Particle definition\n",
     "D = 1\n",
     "Drot = 1\n",
-    "bodytype = 'rigidsolid'\n",
     "position = np.array([1,1,1])\n",
     "position2 = np.array([2,2,2])\n",
     "orientation = np.array([1,0,0,0])\n",
-    "part1 = msmrd2.particle(D, Drot, bodytype, position, orientation)\n",
-    "part2 = msmrd2.particle(D, Drot, bodytype, position2, orientation)"
+    "part1 = msmrd2.particle(D, Drot, position, orientation)\n",
+    "part2 = msmrd2.particle(D, Drot, position2, orientation)"
    ]
   },
   {
@@ -49,10 +48,11 @@
     "# Over-damped Langevin integrator definition\n",
     "dt = 0.001\n",
     "seed = 0 # Seed = -1 used random device as seed\n",
+    "bodytype = 'rigidbody'\n",
     "rotation = True\n",
-    "integrator1 = odLangevin(dt, seed, rotation) \n",
+    "integrator1 = odLangevin(dt, seed, bodytype, rotation) \n",
     "# Second integrator to test list integration\n",
-    "integrator2 = odLangevin(dt, seed, rotation) "
+    "integrator2 = odLangevin(dt, seed, bodytype, rotation) "
    ]
   },
   {
