--- a/examples/dipole.ipynb
+++ b/examples/dipole.ipynb
@@ -90,7 +90,7 @@
    "source": [
     "# Integrate the particles and save to .dat to plot into VMD\n",
     "datafile  = open('../data/vmd/odLangevinDipole.xyz', 'w')\n",
-    "timeIters = 10\n",
+    "timeIters = 20000\n",
     "prevstate = [None] * len(partlist)\n",
     "for i in range(timeIters):\n",
     "    #datafile  = open('odLangevinDipole.xyz', 'w')\n",
@@ -113,7 +113,10 @@
     "            datafile.write('type_1' + ' ' + ' '.join(map(str, v2)) + '\\n')\n",
     "        prevstate[j] = 1*part.state\n",
     "    integrator.integrate(partlist)\n",
-    "datafile.close()"
+    "    if i%1000 == 0:\n",
+    "        print(\"Percentage complete: \", 100*i/timesteps, \"%\", end=\"\\r\")\n",
+    "datafile.close()\n",
+    "print(\"Percentage complete: \", 100, \" %\")"
    ]
   },
   {
