--- a/examples/patchyParticles.ipynb
+++ b/examples/patchyParticles.ipynb
@@ -22,13 +22,15 @@
    "outputs": [],
    "source": [
     "# Define arbitrarily large list of rod-like particles\n",
-    "numparticles = 5\n",
+    "numparticles = 3\n",
     "boxsize = 3\n",
     "D = 1.0\n",
     "Drot = 1.0\n",
-    "bodytype = 'rigidbody'\n",
     "pyPartlist = [] \n",
+    "positionList = [np.array([-1.0,0,0]), np.array([0.,0.,0.]), np.array([1.0,0.,0.]), \n",
+    "                np.array([2.0,0.,0.]), np.array([3.0,0.,0.])]\n",
     "for i in range(numparticles):\n",
+    "    \n",
     "    overlap = True\n",
     "    while overlap:\n",
     "        position = np.array([boxsize*np.random.rand()-0.5*boxsize,\n",
@@ -39,10 +41,13 @@
     "            if np.linalg.norm(position - pyPartlist[j].position) < 2.0:\n",
     "                overlap = True\n",
     "                continue\n",
-    "    orientation = np.array([np.random.rand(),np.random.rand(),np.random.rand(),np.random.rand()])\n",
-    "    orientation = orientation/np.linalg.norm(orientation)\n",
+    "                \n",
+    "    #orientation = np.array([np.random.rand(),np.random.rand(),np.random.rand(),np.random.rand()])\n",
+    "    #orientation = orientation/np.linalg.norm(orientation)\n",
+    "    orientation = np.array([1.,0.,0.,0.])\n",
     "    #orientation = np.array([np.cos(np.pi/4.0), np.sin(np.pi/4), 0.0, 0.0]) #Rotate 90 degrees in x axis\n",
-    "    part = msmrd2.particle(D, Drot, bodytype, position, orientation)\n",
+    "    part = msmrd2.particle(D, Drot, positionList[i], orientation)\n",
+    "    #part = msmrd2.particle(D, Drot, position, orientation)\n",
     "    pyPartlist.append(part)"
    ]
   },
@@ -64,11 +69,12 @@
    "outputs": [],
    "source": [
     "# Over-damped Langevin integrator definition\n",
-    "dt = 0.00001 #0.000005\n",
-    "seed = 6 # Seed = -1 used random device as seed\n",
+    "dt = 0.000005 #0.000005\n",
+    "seed = 0 # Seed = -1 used random device as seed\n",
+    "bodytype = 'rigidbody'\n",
     "rotation = True\n",
-    "integrator = odLangevin(dt, seed, rotation) \n",
-    "#intg.setKbT(1.0)"
+    "integrator = odLangevin(dt, seed, bodytype, rotation) \n",
+    "integrator.setKbT(0.1)"
    ]
   },
   {
@@ -79,8 +85,9 @@
    "source": [
     "# Define boundary (choose either spherical or box)\n",
     "# sphericalBoundary = msmrd2.sphere(radius,'reflective')\n",
-    "boxBoundary = msmrd2.box(boxsize,boxsize,boxsize,'reflective')\n",
-    "integrator.setBoundary(boxBoundary)"
+    "#boxBoundary = msmrd2.box(boxsize,boxsize,boxsize,'reflective')\n",
+    "sphereBoundary = msmrd2.sphere(3.5,'reflective')\n",
+    "integrator.setBoundary(sphereBoundary)"
    ]
   },
   {
@@ -92,7 +99,10 @@
     "# Define Patchy Particle potential\n",
     "sigma = 1.0\n",
     "strength = 100.0\n",
-    "patchesCoordinates = [np.array([1.,0.,0.]), np.array([np.cos(3*np.pi/5.0),np.sin(3*np.pi/5.0),0.])]\n",
+    "patch1 = np.array([1.,0.,0.])\n",
+    "#patch2 = np.array([np.cos(3.2*np.pi/5.0),np.sin(3.2*np.pi/5.0),0.])\n",
+    "patch2 = np.array([-1.,0.,0.])\n",
+    "patchesCoordinates = [patch1, patch2]\n",
     "potentialPatchyParticle = patchyParticle(sigma, strength, patchesCoordinates)\n",
     "integrator.setPairRigidBodyPotential(potentialPatchyParticle)"
    ]
@@ -103,9 +113,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "potentialPatchyParticle.forceTorque(positionList[1],positionList[0], orientation, orientation)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Integrate particle list and print only positions \n",
-    "timesteps = 10000000\n",
-    "stride = 200\n",
+    "timesteps = 100000\n",
+    "stride = 10\n",
     "datafile  = open('../data/vmd/patchyParticles.xyz', 'w')\n",
     "for i in range(timesteps):\n",
     "    if i%stride == 0:\n",
@@ -120,7 +139,7 @@
     "            datafile.write('type_1' + ' ' + ' '.join(map(str, v1)) + '\\n')\n",
     "            datafile.write('type_1' + ' ' + ' '.join(map(str, v2)) + '\\n')\n",
     "    integrator.integrate(partlist)\n",
-    "    if i%1000 == 0:\n",
+    "    if i%5000 == 0:\n",
     "        print(\"Percentage complete: \", 100*i/timesteps, \"%\", end=\"\\r\")\n",
     "datafile.close()\n",
     "# Generate TCL script to visualize with VMD\n",
@@ -136,10 +155,10 @@
    "source": [
     "# Calculate potential for aligned and misaligned molecules\n",
     "dist = np.arange(0, 2*sigma, 0.01)\n",
-    "pos1 = np.array([0., 0., 0.])\n",
+    "pos1 = np.array([0., -sigma/2.0, 0.])\n",
     "pos2 = np.array([[i, 0., 0.] for i in dist])\n",
     "phi1 = 0.0\n",
-    "phi2 = np.pi\n",
+    "phi2 = -np.pi/2.\n",
     "phi1p = np.pi\n",
     "phi2p = 0.0\n",
     "u = np.array([0.,0.,1.]) #rotationAxis\n",
@@ -242,21 +261,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sigma = 1.0\n",
+    "sigmaRep = 1.2\n",
     "# Repulsive part\n",
-    "eps = 100.0\n",
-    "a = 1.0\n",
-    "xstar = 0.85*sigma\n",
-    "xcritical, b = calculateContinuityParametrs(sigma,xstar,a)\n",
+    "eps = 50.0 #100.0\n",
+    "a = 1.5\n",
+    "xstar = 0.75*sigmaRep\n",
+    "xcritical, b = calculateContinuityParametrs(sigmaRep,xstar,a)\n",
+    "sigma = 1.0\n",
     "# Attractive patches part\n",
-    "eps2 = -50.0\n",
-    "a2 = 20.0\n",
+    "eps2 = -20.0\n",
+    "a2 = 40.0\n",
     "xstar2 = 0.1*sigma\n",
     "xcritical2, b2 = calculateContinuityParametrs(sigma,xstar2,a2)\n",
     "# Isotropic attractive\n",
-    "eps3 = -20.0\n",
-    "a3 = 0.55 # 0.5#0.55\n",
-    "xstar3 = 0.85*sigma\n",
+    "eps3 = -2.5\n",
+    "a3 = 0.75 # 0.5#0.55\n",
+    "xstar3 = 0.95*sigma\n",
     "xcritical3, b3 = calculateContinuityParametrs(sigma,xstar3,a3)"
    ]
   },
@@ -267,7 +287,7 @@
    "outputs": [],
    "source": [
     "x = np.arange(0,2.0*sigma,0.001)\n",
-    "y1 = U(x, sigma, xstar, xcritical, eps, a, b)\n",
+    "y1 = U(x, sigmaRep, xstar, xcritical, eps, a, b)\n",
     "y21 = U(x - sigma, sigma, xstar2, xcritical2, eps2, a2, b2)\n",
     "y22 = U(x + sigma, sigma, xstar2, xcritical2, eps2, a2, b2)\n",
     "y3 = U(x, sigma, xstar3, xcritical3, eps3, a3, b3)\n",
@@ -278,6 +298,16 @@
     "plt.plot(x, 0*x, '--k', lw=0.5)\n",
     "plt.xlim([0, 2*sigma])\n",
     "#plt.ylim([-25.0, 100])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "yy = U(x, sigma, xstar2, xcritical2, eps2, a2, b2)\n",
+    "plt.plot(x,yy, '-b')\n"
    ]
   },
   {
