Major correction to centralize force/torques calculation

--- a/examples/gayBerne.ipynb
+++ b/examples/gayBerne.ipynb
@@ -113,6 +113,29 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "th = 1.1*np.pi/2\n",
+    "pos1 = [0.,0.,0.]\n",
+    "pos2 = [1.,0.,0.]\n",
+    "u1 = [0., 1., 0]\n",
+    "u2 = [np.cos(th), np.sin(th),0.]\n",
+    "potentialGB.forceTorque(pos1, pos2, u1, u2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "potentialGB.forceTorque(pos2, pos1, u2, u1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Integrate particle list and print only positions \n",
     "timesteps = 200000\n",
     "stride = 20\n",
