--- a/examples/patchyParticles.ipynb
+++ b/examples/patchyParticles.ipynb
@@ -29,8 +29,23 @@
     "pyPartlist = [] \n",
     "positionList = [np.array([-1.0,0,0]), np.array([0.,0.,0.]), np.array([1.0,0.,0.]), \n",
     "                np.array([2.0,0.,0.]), np.array([3.0,0.,0.])]\n",
+    "orientationList = [ np.array([1.,0.,0.,0.]), np.array([np.cos(np.pi/2),0.,0.,np.sin(np.pi/2)])]\n",
+    "\n",
+    "\"\"\"\n",
+    "# Position List for pentamer IC\n",
+    "th0 = 3*np.pi/5.0\n",
+    "th = np.pi - th0\n",
+    "thextra = np.pi/2 + th/2.0\n",
+    "positionList = []\n",
+    "orientationList = []\n",
+    "for i in range(5):\n",
+    "    positionList.append(0.85*np.array([np.cos(th*i),np.sin(th*i),0.0]))\n",
+    "    orientation = np.array([np.cos(0.5*(th*i + thextra)),0,0,np.sin(0.5*(th*i + thextra))])\n",
+    "    orientationList.append(orientation)\n",
+    "\"\"\"\n",
+    "\n",
     "for i in range(numparticles):\n",
-    "    \n",
+    "    \"\"\"\n",
     "    overlap = True\n",
     "    while overlap:\n",
     "        position = np.array([boxsize*np.random.rand()-0.5*boxsize,\n",
@@ -46,8 +61,11 @@
     "    #orientation = orientation/np.linalg.norm(orientation)\n",
     "    orientation = np.array([1.,0.,0.,0.])\n",
     "    #orientation = np.array([np.cos(np.pi/4.0), np.sin(np.pi/4), 0.0, 0.0]) #Rotate 90 degrees in x axis\n",
-    "    part = msmrd2.particle(D, Drot, positionList[i], orientation)\n",
     "    #part = msmrd2.particle(D, Drot, position, orientation)\n",
+    "    \"\"\"\n",
+    "    orientation = np.array([1.,0.,0.,0.])\n",
+    "    part = msmrd2.particle(D, Drot, positionList[i], orientation)\n",
+    "    #part = msmrd2.particle(D, Drot, positionList[i], orientationList[i])\n",
     "    pyPartlist.append(part)"
    ]
   },
@@ -69,7 +87,7 @@
    "outputs": [],
    "source": [
     "# Over-damped Langevin integrator definition\n",
-    "dt = 0.000005 #0.000005\n",
+    "dt = 0.000001 #0.000005\n",
     "seed = 0 # Seed = -1 used random device as seed\n",
     "bodytype = 'rigidbody'\n",
     "rotation = True\n",
@@ -100,7 +118,7 @@
     "sigma = 1.0\n",
     "strength = 100.0\n",
     "patch1 = np.array([1.,0.,0.])\n",
-    "#patch2 = np.array([np.cos(3.2*np.pi/5.0),np.sin(3.2*np.pi/5.0),0.])\n",
+    "#patch2 = np.array([np.cos(3*np.pi/5.0),np.sin(3*np.pi/5.0),0.])\n",
     "patch2 = np.array([-1.,0.,0.])\n",
     "patchesCoordinates = [patch1, patch2]\n",
     "potentialPatchyParticle = patchyParticle(sigma, strength, patchesCoordinates)\n",
@@ -113,7 +131,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "potentialPatchyParticle.forceTorque(positionList[1],positionList[0], orientation, orientation)"
+    "th = 0.9*np.pi\n",
+    "pos1 = np.array([0.,0.,0.])\n",
+    "pos2 = np.array([1.0,-0.3,0.])\n",
+    "th1 = np.array([1.,0.,0., 0.])\n",
+    "th2 = np.array( [np.cos(th/2.0), 0., 0., np.sin(th/2.0)])\n",
+    "potentialPatchyParticle.forceTorque(pos1, pos2, th1, th2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "potentialPatchyParticle.forceTorque(pos2, pos1, th2, th1)"
    ]
   },
   {
@@ -155,10 +187,10 @@
    "source": [
     "# Calculate potential for aligned and misaligned molecules\n",
     "dist = np.arange(0, 2*sigma, 0.01)\n",
-    "pos1 = np.array([0., -sigma/2.0, 0.])\n",
+    "pos1 = np.array([0., 0., 0.])\n",
     "pos2 = np.array([[i, 0., 0.] for i in dist])\n",
     "phi1 = 0.0\n",
-    "phi2 = -np.pi/2.\n",
+    "phi2 = np.pi\n",
     "phi1p = np.pi\n",
     "phi2p = 0.0\n",
     "u = np.array([0.,0.,1.]) #rotationAxis\n",
@@ -261,7 +293,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sigmaRep = 1.2\n",
+    "sigmaRep = 1.0\n",
     "# Repulsive part\n",
     "eps = 50.0 #100.0\n",
     "a = 1.5\n",
@@ -269,12 +301,12 @@
     "xcritical, b = calculateContinuityParametrs(sigmaRep,xstar,a)\n",
     "sigma = 1.0\n",
     "# Attractive patches part\n",
-    "eps2 = -20.0\n",
+    "eps2 = -7.5\n",
     "a2 = 40.0\n",
     "xstar2 = 0.1*sigma\n",
     "xcritical2, b2 = calculateContinuityParametrs(sigma,xstar2,a2)\n",
     "# Isotropic attractive\n",
-    "eps3 = -2.5\n",
+    "eps3 = -0.0\n",
     "a3 = 0.75 # 0.5#0.55\n",
     "xstar3 = 0.95*sigma\n",
     "xcritical3, b3 = calculateContinuityParametrs(sigma,xstar3,a3)"
@@ -289,7 +321,7 @@
     "x = np.arange(0,2.0*sigma,0.001)\n",
     "y1 = U(x, sigmaRep, xstar, xcritical, eps, a, b)\n",
     "y21 = U(x - sigma, sigma, xstar2, xcritical2, eps2, a2, b2)\n",
-    "y22 = U(x + sigma, sigma, xstar2, xcritical2, eps2, a2, b2)\n",
+    "y22 = U(x + -0.8*sigma, sigma, xstar2, xcritical2, eps2, a2, b2)\n",
     "y3 = U(x, sigma, xstar3, xcritical3, eps3, a3, b3)\n",
     "ym = y1 + y21 + y3\n",
     "yp = y1 + y22 + y3\n",
