Addes pair potentials test test and cleaned up example

--- a/examples/patchyParticles.ipynb
+++ b/examples/patchyParticles.ipynb
@@ -22,7 +22,7 @@
    "outputs": [],
    "source": [
     "# Define arbitrarily large list of rod-like particles\n",
-    "numparticles = 3\n",
+    "numparticles = 5\n",
     "boxsize = 3\n",
     "D = 1.0\n",
     "Drot = 1.0\n",
@@ -31,7 +31,7 @@
     "                np.array([2.0,0.,0.]), np.array([3.0,0.,0.])]\n",
     "orientationList = [ np.array([1.,0.,0.,0.]), np.array([np.cos(np.pi/2),0.,0.,np.sin(np.pi/2)])]\n",
     "\n",
-    "\"\"\"\n",
+    "\n",
     "# Position List for pentamer IC\n",
     "th0 = 3*np.pi/5.0\n",
     "th = np.pi - th0\n",
@@ -42,7 +42,7 @@
     "    positionList.append(0.85*np.array([np.cos(th*i),np.sin(th*i),0.0]))\n",
     "    orientation = np.array([np.cos(0.5*(th*i + thextra)),0,0,np.sin(0.5*(th*i + thextra))])\n",
     "    orientationList.append(orientation)\n",
-    "\"\"\"\n",
+    "\n",
     "\n",
     "for i in range(numparticles):\n",
     "    \"\"\"\n",
@@ -63,9 +63,9 @@
     "    #orientation = np.array([np.cos(np.pi/4.0), np.sin(np.pi/4), 0.0, 0.0]) #Rotate 90 degrees in x axis\n",
     "    #part = msmrd2.particle(D, Drot, position, orientation)\n",
     "    \"\"\"\n",
-    "    orientation = np.array([1.,0.,0.,0.])\n",
-    "    part = msmrd2.particle(D, Drot, positionList[i], orientation)\n",
-    "    #part = msmrd2.particle(D, Drot, positionList[i], orientationList[i])\n",
+    "    #orientation = np.array([1.,0.,0.,0.])\n",
+    "    #part = msmrd2.particle(D, Drot, positionList[i], orientation)\n",
+    "    part = msmrd2.particle(D, Drot, positionList[i], orientationList[i])\n",
     "    pyPartlist.append(part)"
    ]
   },
@@ -118,8 +118,8 @@
     "sigma = 1.0\n",
     "strength = 100.0\n",
     "patch1 = np.array([1.,0.,0.])\n",
-    "#patch2 = np.array([np.cos(3*np.pi/5.0),np.sin(3*np.pi/5.0),0.])\n",
-    "patch2 = np.array([-1.,0.,0.])\n",
+    "patch2 = np.array([np.cos(3*np.pi/5.0),np.sin(3*np.pi/5.0),0.])\n",
+    "#patch2 = np.array([-1.,0.,0.])\n",
     "patchesCoordinates = [patch1, patch2]\n",
     "potentialPatchyParticle = patchyParticle(sigma, strength, patchesCoordinates)\n",
     "integrator.setPairRigidBodyPotential(potentialPatchyParticle)"
