--- a/examples/patchyProteins.ipynb
+++ b/examples/patchyProteins.ipynb
@@ -21,50 +21,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Define arbitrarily large list of rod-like particles\n",
+    "# Define two particle list of rod-like particles\n",
     "np.random.seed(seed=1) # seed 1 good for pentamer \n",
-    "numparticles = 5\n",
+    "numparticles = 2\n",
     "boxsize = 3\n",
     "D = 1.0\n",
     "Drot = 1.0\n",
     "pyPartlist = [] \n",
-    "positionList = [np.array([-1.0,0,0]), np.array([0.,0.,0.]), np.array([1.0,0.,0.]), \n",
-    "                np.array([2.0,0.,0.]), np.array([3.0,0.,0.])]\n",
+    "positionList = [np.array([-1.0,0,0]), np.array([0.,0.,0.])]\n",
     "orientationList = [ np.array([1.,0.,0.,0.]), np.array([np.cos(np.pi/2),0.,0.,np.sin(np.pi/2)])]\n",
-    "\n",
-    "\"\"\"\n",
-    "# Position List for pentamer IC\n",
-    "th0 = 3*np.pi/5.0\n",
-    "th = np.pi - th0\n",
-    "thextra = np.pi/2 + th/2.0\n",
-    "positionList = []\n",
-    "orientationList = []\n",
-    "for i in range(5):\n",
-    "    positionList.append(0.85*np.array([np.cos(th*i),np.sin(th*i),0.0]))\n",
-    "    orientation = np.array([np.cos(0.5*(th*i + thextra)),0,0,np.sin(0.5*(th*i + thextra))])\n",
-    "    orientationList.append(orientation)\n",
-    "\"\"\"\n",
-    "\n",
-    "for i in range(numparticles):\n",
-    "    \n",
-    "    overlap = True\n",
-    "    while overlap:\n",
-    "        position = np.array([boxsize*np.random.rand()-0.5*boxsize,\n",
-    "                             boxsize*np.random.rand()-0.5*boxsize,\n",
-    "                             boxsize*np.random.rand()-0.5*boxsize])\n",
-    "        overlap = False     \n",
-    "        for j in range(len(pyPartlist)):\n",
-    "            if np.linalg.norm(position - pyPartlist[j].position) < 2.0:\n",
-    "                overlap = True\n",
-    "                continue\n",
-    "                \n",
-    "    orientation = np.array([np.random.rand(),np.random.rand(),np.random.rand(),np.random.rand()])\n",
-    "    orientation = orientation/np.linalg.norm(orientation)\n",
-    "    #orientation = np.array([1.,0.,0.,0.])\n",
-    "    #orientation = np.array([np.cos(np.pi/4.0), np.sin(np.pi/4), 0.0, 0.0]) #Rotate 90 degrees in x axis\n",
-    "    part = msmrd2.particle(D, Drot, position, orientation)\n",
-    "    #part = msmrd2.particle(D, Drot, positionList[i], orientation)\n",
-    "    #part = msmrd2.particle(D, Drot, positionList[i], orientationList[i])\n",
+    "for i in range(numparticles):           \n",
+    "    part = msmrd2.particle(D, Drot, positionList[i], orientationList[i])\n",
+    "    part.setType(i)\n",
     "    pyPartlist.append(part)"
    ]
   },
@@ -88,7 +56,7 @@
     "# Over-damped Langevin integrator definition\n",
     "dt = 0.00001 #0.000005\n",
     "seed = 2 # Seed = -1 used random device as seed\n",
-    "bodytype = 'rigidbody'\n",
+    "bodytype = 'rigidbodyMix' # Mix indicates there can be different types of rigidbody particles\n",
     "rotation = True\n",
     "integrator = odLangevin(dt, seed, bodytype, rotation) \n",
     "integrator.setKbT(0.1)"
@@ -116,12 +84,13 @@
     "# Define Patchy Particle potential\n",
     "sigma = 1.0\n",
     "strength = 200.0\n",
-    "patch1 = np.array([3.,0.,0.])\n",
-    "patch2 = np.array([np.cos(3*np.pi/5.0),np.sin(3*np.pi/5.0),0.])\n",
-    "#patch2 = np.array([-1.,0.,0.])\n",
-    "patchesCoordinates = [patch1, patch2]\n",
-    "potentialPatchyParticle = patchyParticle(sigma, strength, patchesCoordinates)\n",
-    "integrator.setPairRigidBodyPotential(potentialPatchyParticle)"
+    "patchesCoordinates1 = [np.array([1.,0.,0.]), \n",
+    "                       np.array([0.,1.,0.]),\n",
+    "                       np.array([-1.,0.,0.]),\n",
+    "                       np.array([0.,-1.,0.])\n",
+    "patchesCoordinates2 = [np.array(1.,0.,0.)]\n",
+    "potentialPatchyProtein = patchyProtein(sigma, strength, patchesCoordinates1, patchesCoordinates2)\n",
+    "integrator.setPairRigidBodyMixPotential(potentialPatchyProtein)"
    ]
   },
   {
