--- a/examples/potentials.ipynb
+++ b/examples/potentials.ipynb
@@ -86,16 +86,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "bodytype = 'rod'\n",
+    "integrator2 = odLangevin(dt, seed, bodytype, rotation) \n",
     "dipolePot = dipole(1.0, np.array([0,0,1]))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "integrator.setExternalRodPotential(dipolePot)"
    ]
   },
   {
