Particle type incorporated in potential pybind evaluations

--- a/examples/potentials.ipynb
+++ b/examples/potentials.ipynb
@@ -33,7 +33,7 @@
    "source": [
     "# Evaluate at some point\n",
     "r = np.array([0.5,0.2,0.4])\n",
-    "print(gauss3Dpot.evaluate(r),gauss3Dpot.force(r))"
+    "print(gauss3Dpot.evaluate(r),gauss3Dpot.forceTorque(r))"
    ]
   },
   {
