--- a/examples/patchyProteins.ipynb
+++ b/examples/patchyProteins.ipynb
@@ -11,7 +11,7 @@
     "import msmrd2\n",
     "import msmrd2.tools.quaternions as quats\n",
     "import msmrd2.visualization as msmrdvis\n",
-    "from msmrd2.potentials import patchyParticle\n",
+    "from msmrd2.potentials import patchyProtein\n",
     "from msmrd2.integrators import overdampedLangevin as odLangevin"
    ]
   },
@@ -22,13 +22,11 @@
    "outputs": [],
    "source": [
     "# Define two particle list of rod-like particles\n",
-    "np.random.seed(seed=1) # seed 1 good for pentamer \n",
     "numparticles = 2\n",
-    "boxsize = 3\n",
     "D = 1.0\n",
     "Drot = 1.0\n",
     "pyPartlist = [] \n",
-    "positionList = [np.array([-1.0,0,0]), np.array([0.,0.,0.])]\n",
+    "positionList = [np.array([1.0,0,0]), np.array([-1.,0.,0.])]\n",
     "orientationList = [ np.array([1.,0.,0.,0.]), np.array([np.cos(np.pi/2),0.,0.,np.sin(np.pi/2)])]\n",
     "for i in range(numparticles):           \n",
     "    part = msmrd2.particle(D, Drot, positionList[i], orientationList[i])\n",
@@ -55,11 +53,11 @@
    "source": [
     "# Over-damped Langevin integrator definition\n",
     "dt = 0.00001 #0.000005\n",
-    "seed = 2 # Seed = -1 used random device as seed\n",
+    "seed = -1 # Seed = -1 used random device as seed\n",
     "bodytype = 'rigidbodyMix' # Mix indicates there can be different types of rigidbody particles\n",
     "rotation = True\n",
     "integrator = odLangevin(dt, seed, bodytype, rotation) \n",
-    "integrator.setKbT(0.1)"
+    "integrator.setKbT(1.0)"
    ]
   },
   {
@@ -69,9 +67,8 @@
    "outputs": [],
    "source": [
     "# Define boundary (choose either spherical or box)\n",
-    "# sphericalBoundary = msmrd2.sphere(radius,'reflective')\n",
-    "#boxBoundary = msmrd2.box(boxsize,boxsize,boxsize,'reflective')\n",
-    "sphereBoundary = msmrd2.sphere(boxsize,'reflective')\n",
+    "radius = 1.5\n",
+    "sphereBoundary = msmrd2.sphere(radius,'reflective')\n",
     "integrator.setBoundary(sphereBoundary)"
    ]
   },
@@ -81,14 +78,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Define Patchy Particle potential\n",
+    "# Define Patchy Protein potential\n",
     "sigma = 1.0\n",
-    "strength = 200.0\n",
+    "strength = 50.0\n",
     "patchesCoordinates1 = [np.array([1.,0.,0.]), \n",
     "                       np.array([0.,1.,0.]),\n",
     "                       np.array([-1.,0.,0.]),\n",
-    "                       np.array([0.,-1.,0.])\n",
-    "patchesCoordinates2 = [np.array(1.,0.,0.)]\n",
+    "                       np.array([0.,-1.,0.]),\n",
+    "                       np.array([0.,0.,1.]),\n",
+    "                       np.array([0.,0.,-1.])]\n",
+    "patchesCoordinates2 = [np.array([1.,0.,0.])]\n",
     "potentialPatchyProtein = patchyProtein(sigma, strength, patchesCoordinates1, patchesCoordinates2)\n",
     "integrator.setPairRigidBodyMixPotential(potentialPatchyProtein)"
    ]
@@ -100,27 +99,41 @@
    "outputs": [],
    "source": [
     "# Integrate particle list and print only positions \n",
-    "timesteps = 5000000\n",
-    "stride = 2500 #1000\n",
-    "datafile  = open('../data/vmd/patchyParticles.xyz', 'w')\n",
+    "timesteps = 500000\n",
+    "stride = 250 #1000\n",
+    "datafile  = open('../data/vmd/patchyProteins.xyz', 'w')\n",
     "for i in range(timesteps):\n",
     "    if i%stride == 0:\n",
-    "        datafile.write(str(3*len(partlist)) + '\\n')\n",
+    "        datafile.write(str(9) + '\\n')\n",
     "        datafile.write(str(0) + '\\n')\n",
     "    for j, part in enumerate(partlist):\n",
     "        if i%stride == 0:\n",
-    "            v0 = part.position\n",
-    "            v1 = v0 + 0.6*sigma*quats.rotateVec(patchesCoordinates[0], part.orientation)\n",
-    "            v2 = v0 + 0.6*sigma*quats.rotateVec(patchesCoordinates[1], part.orientation)\n",
-    "            datafile.write('type_0' + ' ' + ' '.join(map(str, v0)) + '\\n')\n",
-    "            datafile.write('type_1' + ' ' + ' '.join(map(str, v1)) + '\\n')\n",
-    "            datafile.write('type_1' + ' ' + ' '.join(map(str, v2)) + '\\n')\n",
+    "            if part.type == 0:\n",
+    "                v0 = part.position\n",
+    "                v1 = v0 + 0.4*sigma*quats.rotateVec(patchesCoordinates1[0], part.orientation)\n",
+    "                v2 = v0 + 0.3*sigma*quats.rotateVec(patchesCoordinates1[1], part.orientation)\n",
+    "                v3 = v0 + 0.3*sigma*quats.rotateVec(patchesCoordinates1[2], part.orientation)\n",
+    "                v4 = v0 + 0.3*sigma*quats.rotateVec(patchesCoordinates1[3], part.orientation)\n",
+    "                v5 = v0 + 0.3*sigma*quats.rotateVec(patchesCoordinates1[4], part.orientation)\n",
+    "                v6 = v0 + 0.3*sigma*quats.rotateVec(patchesCoordinates1[5], part.orientation)\n",
+    "                datafile.write('type_0' + ' ' + ' '.join(map(str, v0)) + '\\n')\n",
+    "                datafile.write('type_2' + ' ' + ' '.join(map(str, v1)) + '\\n')\n",
+    "                datafile.write('type_1' + ' ' + ' '.join(map(str, v2)) + '\\n')\n",
+    "                datafile.write('type_1' + ' ' + ' '.join(map(str, v3)) + '\\n')\n",
+    "                datafile.write('type_1' + ' ' + ' '.join(map(str, v4)) + '\\n')\n",
+    "                datafile.write('type_1' + ' ' + ' '.join(map(str, v5)) + '\\n')\n",
+    "                datafile.write('type_1' + ' ' + ' '.join(map(str, v6)) + '\\n')\n",
+    "            if part.type == 1:\n",
+    "                v0 = part.position\n",
+    "                v1 = v0 + 0.4*sigma*quats.rotateVec(patchesCoordinates2[0], part.orientation)\n",
+    "                datafile.write('type_0' + ' ' + ' '.join(map(str, v0)) + '\\n')\n",
+    "                datafile.write('type_2' + ' ' + ' '.join(map(str, v1)) + '\\n')\n",
     "    integrator.integrate(partlist)\n",
     "    if i%5000 == 0:\n",
     "        print(\"Percentage complete: \", 100*i/timesteps, \"%\", end=\"\\r\")\n",
     "datafile.close()\n",
     "# Generate TCL script to visualize with VMD\n",
-    "msmrdvis.generateTCL_patchyParticles(numparticles = numparticles)\n",
+    "msmrdvis.generateTCL_patchyProteins(numparticles = numparticles)\n",
     "print(\"Percentage complete: \", 100, \" %\")"
    ]
   },
@@ -183,123 +196,6 @@
    "source": [
     "potentialPatchyParticle.forceTorque(pos1,pos2[20],theta1p,theta2p)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def U(x, sigma, xstar, xcritical, eps, a, b):\n",
-    "    if (xstar>xcritical):\n",
-    "        raise ValueError('xstar should be smaller than xcritical.')\n",
-    "    resultm2 = np.array([])\n",
-    "    resultm1 = np.array([])\n",
-    "    result0 = np.array([])\n",
-    "    x0 = x[x<0]\n",
-    "    if len(x0) > 0:\n",
-    "        xm2 = x0[x0 < -xcritical]\n",
-    "        resultm2 = 0.0*xm2\n",
-    "        xm1 = x0[x0 >= -xcritical]\n",
-    "        xm1 = xm1[xm1 < -xstar]\n",
-    "        resultm1 = eps*b*(xcritical/sigma + xm1/sigma)**2\n",
-    "        x0 = x0[x0 >= -xstar]\n",
-    "        result0 = eps*(1.0 - a*(x0/sigma)**2)\n",
-    "    x1 = x[x>=0]\n",
-    "    x1 = x1[x1<xstar]\n",
-    "    result1 = eps*(1.0 - a*(x1/sigma)**2)\n",
-    "    x2 = x[x>=xstar]\n",
-    "    x2 = x2[x2<xcritical]\n",
-    "    result2 = eps*b*(xcritical/sigma - x2/sigma)**2\n",
-    "    x3 = x[x>=xcritical]\n",
-    "    result3 = 0.0*x3 \n",
-    "    return np.concatenate((resultm2, resultm1, result0, result1, result2, result3))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def calculateContinuityParametrs(sigma, xstar, a):\n",
-    "    xcritical = sigma**2/(a*xstar)\n",
-    "    b = (1.0 - a*(xstar/sigma)**2)/(xcritical/sigma - xstar/sigma)**2\n",
-    "    return xcritical, b\n",
-    "def calculateContinuityParametrs2(sigma, xstar, a):\n",
-    "    xcritical = sigma**2/(a*xstar)\n",
-    "    b = -(1.0 - a*(xstar/sigma)**2)/(xcritical/sigma - xstar/sigma)**2\n",
-    "    return xcritical, b"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sigmaRep = 1.0\n",
-    "# Repulsive part\n",
-    "eps = 50.0 #100.0\n",
-    "a = 1.5\n",
-    "xstar = 0.75*sigmaRep\n",
-    "xcritical, b = calculateContinuityParametrs(sigmaRep,xstar,a)\n",
-    "sigma = 1.0\n",
-    "# Attractive patches part\n",
-    "eps2 = -7.5\n",
-    "a2 = 40.0\n",
-    "xstar2 = 0.1*sigma\n",
-    "xcritical2, b2 = calculateContinuityParametrs(sigma,xstar2,a2)\n",
-    "# Isotropic attractive\n",
-    "eps3 = -0.0\n",
-    "a3 = 0.75 # 0.5#0.55\n",
-    "xstar3 = 0.95*sigma\n",
-    "xcritical3, b3 = calculateContinuityParametrs(sigma,xstar3,a3)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "x = np.arange(0,2.0*sigma,0.001)\n",
-    "y1 = U(x, sigmaRep, xstar, xcritical, eps, a, b)\n",
-    "y21 = U(x - sigma, sigma, xstar2, xcritical2, eps2, a2, b2)\n",
-    "y22 = U(x + -0.8*sigma, sigma, xstar2, xcritical2, eps2, a2, b2)\n",
-    "y3 = U(x, sigma, xstar3, xcritical3, eps3, a3, b3)\n",
-    "ym = y1 + y21 + y3\n",
-    "yp = y1 + y22 + y3\n",
-    "plt.plot(x,ym, '-b')\n",
-    "plt.plot(x,yp, '-r')\n",
-    "plt.plot(x, 0*x, '--k', lw=0.5)\n",
-    "plt.xlim([0, 2*sigma])\n",
-    "#plt.ylim([-25.0, 100])\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "yy = U(x, sigma, xstar2, xcritical2, eps2, a2, b2)\n",
-    "plt.plot(x,yy, '-b')\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
