Removed redundancy in integrator constructor

--- a/examples/odLangevin.ipynb
+++ b/examples/odLangevin.ipynb
@@ -49,10 +49,9 @@
     "dt = 0.001\n",
     "seed = 0 # Seed = -1 used random device as seed\n",
     "bodytype = 'rigidbody'\n",
-    "rotation = True\n",
-    "integrator1 = odLangevin(dt, seed, bodytype, rotation) \n",
+    "integrator1 = odLangevin(dt, seed, bodytype) \n",
     "# Second integrator to test list integration\n",
-    "integrator2 = odLangevin(dt, seed, bodytype, rotation) "
+    "integrator2 = odLangevin(dt, seed, bodytype) "
    ]
   },
   {
@@ -83,20 +82,6 @@
     "    print('{:<10d}{:<15f}{:<40s}{:<50s}'.format(i, integrator2.clock, str(partlist[0].position), str(partlist[1].position)))\n",
     "    integrator2.integrate(partlist)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
