--- a/examples/odLangevinMarkovSwitch.ipynb
+++ b/examples/odLangevinMarkovSwitch.ipynb
@@ -55,10 +55,9 @@
     "dt = 0.05 # should be smaller than Gillespie inverse transition rates\n",
     "seed = 0 # Seed = -1 used random device as seed\n",
     "bodytype = 'rigidbody'\n",
-    "rotation = True\n",
-    "integrator1 = odLangevinMS(markovModel, dt, seed, bodytype, rotation) \n",
+    "integrator1 = odLangevinMS(markovModel, dt, seed, bodytype) \n",
     "# Create second integrator for list integration\n",
-    "integrator2 = odLangevinMS(markovModel, dt, seed, bodytype, rotation) "
+    "integrator2 = odLangevinMS(markovModel, dt, seed, bodytype) "
    ]
   },
   {
@@ -99,6 +98,13 @@
     "          .format(integrator2.clock, partlist[0].state, str(partlist[0].position), partlist[1].state, str(partlist[1].position)))\n",
     "    integrator2.integrate(partlist)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
