--- a/examples/patchyProteins.ipynb
+++ b/examples/patchyProteins.ipynb
@@ -53,10 +53,9 @@
    "source": [
     "# Over-damped Langevin integrator definition\n",
     "dt = 0.00001 #0.000005\n",
-    "seed = -1 # Seed = -1 used random device as seed\n",
+    "seed = 0 # Seed = -1 used random device as seed\n",
     "bodytype = 'rigidbodyMix' # Mix indicates there can be different types of rigidbody particles\n",
-    "rotation = True\n",
-    "integrator = odLangevin(dt, seed, bodytype, rotation) \n",
+    "integrator = odLangevin(dt, seed, bodytype) \n",
     "integrator.setKbT(1.0)"
    ]
   },
@@ -67,7 +66,7 @@
    "outputs": [],
    "source": [
     "# Define boundary (choose either spherical or box)\n",
-    "radius = 1.5\n",
+    "radius = 5.0\n",
     "sphereBoundary = msmrd2.sphere(radius,'reflective')\n",
     "integrator.setBoundary(sphereBoundary)"
    ]
@@ -80,7 +79,7 @@
    "source": [
     "# Define Patchy Protein potential\n",
     "sigma = 1.0\n",
-    "strength = 50.0\n",
+    "strength = 65\n",
     "patchesCoordinates1 = [np.array([1.,0.,0.]), \n",
     "                       np.array([0.,1.,0.]),\n",
     "                       np.array([-1.,0.,0.]),\n",
@@ -99,8 +98,8 @@
    "outputs": [],
    "source": [
     "# Integrate particle list and print only positions \n",
-    "timesteps = 500000\n",
-    "stride = 250 #1000\n",
+    "timesteps = 50000000\n",
+    "stride = 1000 #1000\n",
     "datafile  = open('../data/vmd/patchyProteins.xyz', 'w')\n",
     "for i in range(timesteps):\n",
     "    if i%stride == 0:\n",
@@ -170,8 +169,8 @@
     "                   np.sin(0.5*phi2p )*u[1],\n",
     "                   np.sin(0.5*phi2p )*u[2]]) \n",
     "\n",
-    "potantialAligned = [potentialPatchyParticle.evaluate(pos1,p2,theta1,theta2) for p2 in pos2]\n",
-    "potantialMisaligned = [potentialPatchyParticle.evaluate(pos1,p2,theta1p,theta2p) for p2 in pos2]"
+    "potantialAligned = [potentialPatchyProtein.evaluate(pos1,p2,theta1,theta2, 0, 1) for p2 in pos2]\n",
+    "potantialMisaligned = [potentialPatchyProtein.evaluate(pos1,p2,theta1p,theta2p, 0, 1) for p2 in pos2]"
    ]
   },
   {
@@ -194,8 +193,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "potentialPatchyParticle.forceTorque(pos1,pos2[20],theta1p,theta2p)"
+    "potentialPatchyProtein.forceTorque(pos1,pos2[20],theta1p,theta2p, 0, 1)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
