--- a/examples/potentials.ipynb
+++ b/examples/potentials.ipynb
@@ -75,8 +75,7 @@
     "dt = 0.001\n",
     "seed = 0 # Seed = -1 used random device as seed\n",
     "bodytype = 'point'\n",
-    "rotation = True\n",
-    "integrator = odLangevin(dt, seed, bodytype, rotation) \n",
+    "integrator = odLangevin(dt, seed, bodytype) \n",
     "integrator.setExternalPotential(gauss3Dpot)"
    ]
   },
@@ -87,7 +86,7 @@
    "outputs": [],
    "source": [
     "bodytype = 'rod'\n",
-    "integrator2 = odLangevin(dt, seed, bodytype, rotation) \n",
+    "integrator2 = odLangevin(dt, seed, bodytype) \n",
     "dipolePot = dipole(1.0, np.array([0,0,1]))"
    ]
   },
@@ -100,6 +99,13 @@
     "u=np.array([1,0,0])\n",
     "print(dipolePot.evaluate(r,u),dipolePot.forceTorque(r,u))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
