--- a/examples/dipole.ipynb
+++ b/examples/dipole.ipynb
@@ -65,8 +65,7 @@
     "dt = 0.001\n",
     "seed = -1 # Seed = -1 used random device as seed\n",
     "bodytype = \"rod\"\n",
-    "rotation = True\n",
-    "integrator = odLangevinMS(markovModel, dt, seed, bodytype, rotation)"
+    "integrator = odLangevinMS(markovModel, dt, seed, bodytype)"
    ]
   },
   {
