--- a/examples/gayBerne.ipynb
+++ b/examples/gayBerne.ipynb
@@ -79,8 +79,7 @@
     "dt = 0.000005\n",
     "seed = 0 # Seed = -1 used random device as seed\n",
     "bodytype = 'rod'\n",
-    "rotation = True\n",
-    "integrator = odLangevin(dt, seed, bodytype, rotation) \n",
+    "integrator = odLangevin(dt, seed, bodytype) \n",
     "integrator.setKbT(0.1)"
    ]
   },
@@ -179,13 +178,6 @@
     "plt.plot(dist+3, Epot_end2end)\n",
     "plt.plot(dist+1, Epot_side2side)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
