--- a/examples/patchyParticles.ipynb
+++ b/examples/patchyParticles.ipynb
@@ -89,8 +89,7 @@
     "dt = 0.00001 #0.000005\n",
     "seed = 2 # Seed = -1 used random device as seed\n",
     "bodytype = 'rigidbody'\n",
-    "rotation = True\n",
-    "integrator = odLangevin(dt, seed, bodytype, rotation) \n",
+    "integrator = odLangevin(dt, seed, bodytype) \n",
     "integrator.setKbT(0.1)"
    ]
   },
@@ -116,7 +115,7 @@
     "# Define Patchy Particle potential\n",
     "sigma = 1.0\n",
     "strength = 200.0\n",
-    "patch1 = np.array([3.,0.,0.])\n",
+    "patch1 = np.array([1.,0.,0.])\n",
     "patch2 = np.array([np.cos(3*np.pi/5.0),np.sin(3*np.pi/5.0),0.])\n",
     "#patch2 = np.array([-1.,0.,0.])\n",
     "patchesCoordinates = [patch1, patch2]\n",
