Begin patchy protein with MS

--- a/examples/patchyProteinsMarkovSwitch.ipynb
+++ b/examples/patchyProteinsMarkovSwitch.ipynb
@@ -98,9 +98,9 @@
    "outputs": [],
    "source": [
     "# Integrate particle list and print only positions \n",
-    "timesteps = 50000000\n",
-    "stride = 1000 #1000\n",
-    "datafile  = open('../data/vmd/patchyProteins.xyz', 'w')\n",
+    "timesteps = 5000 #50000000\n",
+    "stride = 100 #1000\n",
+    "datafile  = open('../data/vmd/patchyProteinsMS.xyz', 'w')\n",
     "for i in range(timesteps):\n",
     "    if i%stride == 0:\n",
     "        datafile.write(str(9) + '\\n')\n",
@@ -132,68 +132,8 @@
     "        print(\"Percentage complete: \", 100*i/timesteps, \"%\", end=\"\\r\")\n",
     "datafile.close()\n",
     "# Generate TCL script to visualize with VMD\n",
-    "msmrdvis.generateTCL_patchyProteins(numparticles = numparticles)\n",
+    "msmrdvis.generateTCL_patchyProteinsMS(numparticles = numparticles)\n",
     "print(\"Percentage complete: \", 100, \" %\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Calculate potential for aligned and misaligned molecules\n",
-    "dist = np.arange(0, 2*sigma, 0.01)\n",
-    "pos1 = np.array([0., 0., 0.])\n",
-    "pos2 = np.array([[i, 0., 0.] for i in dist])\n",
-    "phi1 = 0.0\n",
-    "phi2 = np.pi\n",
-    "phi1p = np.pi\n",
-    "phi2p = 0.0\n",
-    "u = np.array([0.,0.,1.]) #rotationAxis\n",
-    "# Quaternions that rotate phi along axis u\n",
-    "theta1 = np.array([np.cos(0.5*phi1 ),\n",
-    "                   np.sin(0.5*phi1 )*u[0],\n",
-    "                   np.sin(0.5*phi1 )*u[1],\n",
-    "                   np.sin(0.5*phi1 )*u[2]]) \n",
-    "theta2 = np.array([np.cos(0.5*phi2 ),\n",
-    "                   np.sin(0.5*phi2 )*u[0],\n",
-    "                   np.sin(0.5*phi2 )*u[1],\n",
-    "                   np.sin(0.5*phi2 )*u[2]]) \n",
-    "theta1p = np.array([np.cos(0.5*phi1p ),\n",
-    "                   np.sin(0.5*phi1p )*u[0],\n",
-    "                   np.sin(0.5*phi1p )*u[1],\n",
-    "                   np.sin(0.5*phi1p )*u[2]]) \n",
-    "theta2p = np.array([np.cos(0.5*phi2p ),\n",
-    "                   np.sin(0.5*phi2p )*u[0],\n",
-    "                   np.sin(0.5*phi2p )*u[1],\n",
-    "                   np.sin(0.5*phi2p )*u[2]]) \n",
-    "\n",
-    "potantialAligned = [potentialPatchyProtein.evaluate(pos1,p2,theta1,theta2, 0, 1) for p2 in pos2]\n",
-    "potantialMisaligned = [potentialPatchyProtein.evaluate(pos1,p2,theta1p,theta2p, 0, 1) for p2 in pos2]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Plot potential\n",
-    "plt.plot(dist, potantialAligned, label = \"aligned\")\n",
-    "plt.plot(dist, potantialMisaligned, label = \"misaligned\")\n",
-    "plt.plot(dist, 0*dist, '--k', lw=0.5)\n",
-    "plt.legend()\n",
-    "plt.xlim([0,2*sigma])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "potentialPatchyProtein.forceTorque(pos1,pos2[20],theta1p,theta2p, 0, 1)"
    ]
   },
   {
